# esox

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/esox_font/: Cargo.toml
crates/esox_font/examples/: visual_demo.rs
crates/esox_font/src/: cache.rs  face.rs  fallback.rs  lib.rs  lookup.rs  rasterizer.rs  shaper.rs
crates/esox_gfx/: Cargo.toml
crates/esox_gfx/shaders/: bloom_downsample.wgsl  bloom_upsample.wgsl  composite.wgsl  depth_resolve.wgsl  fs_lit.wgsl  fs_pbr.wgsl  fs_toon.wgsl  fs_unlit.wgsl  preamble.wgsl  shadow_vertex.wgsl  skinning.wgsl  ssao.wgsl  ssao_blur.wgsl
crates/esox_gfx/src/: atlas.rs  bloom.rs  color.rs  damage.rs  error.rs  frame.rs  lib.rs  offscreen.rs  pipeline.rs  primitive.rs  scene.rs  screenshot.rs  shape.rs
crates/esox_gfx/src/mesh3d/: bounds.rs  bvh.rs  camera.rs  depth_resolve.rs  gltf_loader.rs  ibl.rs  instance.rs  light.rs  material.rs  mesh.rs  mod.rs  particles.rs  postprocess.rs  render_types.rs  renderer.rs  scene.rs  shader_library.rs  shaders_embedded.rs  shadow.rs  skeleton.rs  skinning.rs  ssao.rs  texture.rs  transform.rs  vertex.rs
crates/esox_input/: Cargo.toml
crates/esox_input/src/: lib.rs
crates/esox_markup/: Cargo.toml
crates/esox_markup/src/: ast.rs  lib.rs  parser.rs
crates/esox_platform/: Cargo.toml
crates/esox_platform/src/: atspi.rs  config.rs  lib.rs  perf.rs  portal.rs  sandbox.rs  settings.rs  xdg.rs
crates/esox_ui/: Cargo.toml
crates/esox_ui/src/: a11y.rs  icon.rs  id.rs  layout.rs  layout_tree.rs  lib.rs  paint.rs  response.rs  rich_text.rs  state.rs  text.rs  theme.rs
crates/esox_ui/src/interpret/: id_gen.rs  mod.rs  render.rs  resolve.rs  state.rs
crates/esox_ui/src/widgets/: accordion.rs  alert.rs  avatar.rs  badge.rs  blockquote.rs  breadcrumb.rs  button.rs  checkbox.rs  chip.rs  code_block.rs  collapsing.rs  combobox.rs  container.rs  drawer.rs  drop_zone.rs  empty_state.rs  form.rs  hyperlink.rs  icon.rs  image.rs  label.rs  menu_bar.rs  mod.rs  modal.rs  number_input.rs  pagination.rs  paragraph.rs  popover.rs  progress_bar.rs  radio.rs  rating.rs  scrollable.rs  select.rs  separator.rs  sidebar.rs  skeleton.rs  slider.rs  spinner.rs  split_pane.rs  spoiler.rs  (+10 more)
examples/demo/: Cargo.toml
examples/demo/src/: main.rs
examples/discord_demo/: Cargo.toml
examples/discord_demo/src/: main.rs
examples/feature_showcase/: Cargo.toml
examples/feature_showcase/src/: main.rs
examples/google_showcase/: Cargo.toml
examples/google_showcase/src/: main.rs
examples/layout_showcase/: Cargo.toml
examples/layout_showcase/src/: main.rs
examples/markup_demo/: Cargo.toml  ui.exui
examples/markup_demo/src/: main.rs
examples/material_showcase/: Cargo.toml
examples/material_showcase/src/: main.rs
examples/widget_showcase/: Cargo.toml
examples/widget_showcase/src/: main.rs
