[package]
name = "esox_gfx"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GPU rendering engine with arena scene graph and instanced quad pipeline"

[features]
default = []
mesh3d = ["dep:glam", "dep:gltf"]
hot-reload = ["dep:notify"]
serde = ["dep:serde"]

[dependencies]
bytemuck = { workspace = true }
glam = { version = "0.29", optional = true }
gltf = { workspace = true, optional = true }
image = { workspace = true }
naga = { workspace = true }
notify = { version = "7", optional = true }
raw-window-handle = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
