[package]
name = "feature_showcase"
version.workspace = true
edition.workspace = true

[dependencies]
esox_gfx = { workspace = true }
esox_font = { workspace = true }
esox_ui = { workspace = true }
esox_platform = { workspace = true }
esox_input = { workspace = true }
tracing-subscriber = { workspace = true }
